--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKERHUB_REPO: frolvlad/alpine-glibc
+  DOCKERHUB_REPO: autosre/alpine-glibc
 
 jobs:
   build:
@@ -77,7 +77,7 @@ jobs:
     strategy:
       matrix:
         alpine:
-          - 3.22
+          - 3.23
         glibc:
           - 2.42
     runs-on: ubuntu-latest
@@ -105,11 +105,6 @@ jobs:
         run: |
           docker buildx imagetools create \
             -t ${{ env.DOCKERHUB_REPO }}:latest \
-            -t ${{ env.DOCKERHUB_REPO }}:glibc-${{ matrix.glibc }} \
-            -t ${{ env.DOCKERHUB_REPO }}:alpine-3 \
-            -t ${{ env.DOCKERHUB_REPO }}:alpine-${{ matrix.alpine }} \
-            -t ${{ env.DOCKERHUB_REPO }}:alpine-3_glibc-${{ matrix.glibc }} \
-            -t ${{ env.DOCKERHUB_REPO }}:alpine-${{ matrix.alpine }}_glibc-${{ matrix.glibc }} \
             $(printf '${{ env.DOCKERHUB_REPO }}@sha256:%s ' *)
 
       - name: Inspect image
